# hw0

./: CMakeLists.txt  README.md  a.out  azure-pipelines.yml  catch.h  helpers.h  hw0-sol.sln  hw0-sol.vcxproj  hw0-sol.vcxproj.filters  index.md  main.cpp  points.txt  report.sh  report.txt  t0.cpp  t1.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  t6.cpp  test-main.cpp  test.hpp  test.sh  test0.sh  test1.sh  test2.sh  test3.sh  tmp.cpp
.github/classroom/: autograding.json
.github/workflows/: classroom.yml  macos.yml
